--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-Welcome to Ampere's Home!
+<!DOCTYPE html>
+<html>
+<head>
+<center>
+<title> Welcome to Ampere! </title>
+  </center>
+<b> Home </b>
+<h1>Welcome to Ampere! </h1>
+<h2> Our Goal: </h2>
+
+</head>
+
+<body>
+<p> We want to create efficient cars that don’t use up fossil fuels, help reduce global warming so we can save the planet, and use part of the money to further our cause.
+</p>		
+	
+
+</body>
+</html>
