--- a/index.html
+++ b/index.html
@@ -1,19 +1,10 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<center>
-<title> Welcome to Ampere! </title>
-  </center>
-<b> Home </b>
-<h1>Welcome to Ampere! </h1>
-<h2> Our Goal: </h2>
+<title>Welcome to Ampere</title>
+<link rel="icon" type="image/ico" href="favicon.ico" />
+<link href='http://fonts.googleapis.com/css?family=Merienda+One' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Berkshire+Swash' rel='stylesheet' type='text/css'>
 
 </head>
-
-<body>
-<p> We want to create efficient cars that don’t use up fossil fuels, help reduce global warming so we can save the planet, and use part of the money to further our cause.
-</p>		
-	
-
-</body>
-</html>
