--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <link href='http://fonts.googleapis.com/css?family=Berkshire+Swash' rel='stylesheet' type='text/css'>
 </head>
   
+  <center>
   <h1> ofof </h1>
+  </center>
     
     
