--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <br><br>
   
   <h2>Our Goals </h2>
-  
+  <p> We want to create efficient cars that don’t use up fossil fuels, help reduce global warming so we can save the planet, and use part of the money to further our cause. 
+  </p>
   
  
     
