--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ h6 {
 </div>
 
 <center>
- <img src="images/TocoToucan.png" style="width: 20%; padding-right: 25px; display: block; margin:auto" >
+ <img src="images/Jaguar.jpeg" style="width: 20%; padding-right: 25px; display: block; margin:auto" >
 </center>
 
 <h4> Welcome to the Flying Toucans Marching Band homepage, where you can enjoy the samples of previous performance videos, audio tracks and image gallery. The Flying Toucans Marching Band Group has been performing award winning shows for over a decade. Our group has nearly 100 members and our director, Ducky Toms, has been constantly perfecting our shows. Some of our award winning shows were Walking Giants, Away from Home, Jazzy Space, and The Homecoming Queen. 
