--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@ h6 {
 	     background-position: 0% 0%; background-color: ##0000cc;">
 
 <div class="header">
-<img src="images/dasd_logo.jpg" 
-	 alt="https://s3.amazonaws.com/bandlogos.ussba.trigonroad.com/E85A6363-EEBF-0C55-B9917F951370BE04.jpg" 
+<img src="ampere_logo.png" 
+	 alt="Ampere Logo" 
 	 style="float:left; margin-bottom:20px; height: 160px; width: 120px; object-fit: contain;"
 >
 <h1> Flying Toucans Marching Band</h1>
