--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-<title>Flying Toucans Marching Band</title>
+<title>Ampere</title>
 <link rel="icon" type="image/ico" href="favicon.ico" />
 <link href='http://fonts.googleapis.com/css?family=Merienda+One' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Berkshire+Swash' rel='stylesheet' type='text/css'>
@@ -108,7 +108,7 @@ h6 {
 	 alt="Ampere Logo" 
 	 style="float:left; margin-bottom:20px; height: 160px; width: 120px; object-fit: contain;"
 >
-<h1> Flying Toucans Marching Band</h1>
+<h1> Welcome to Ampere</h1>
 </div>
 
 <div class="topnav">
