--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@ h6 {
 </style>
 </head>
 	
-<body style="background-image:url('images/background.jpg');  background-repeat: no-repeat; background-size: cover;
+<body>
+<div style="background-image: url('images/background.jpg'); background-repeat: no-repeat; background-size: cover;
 	     background-position: 0% 0%; background-color: ##0000cc;">
 
 <div class="header">
