--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@ h6 {
 </head>
 	
 <body>
-<div style="background-image: url('images/background.jpg'); background-repeat: no-repeat; background-size: cover;
+<div style="background-image: url('images/new_background.jpg'); background-repeat: no-repeat; background-size: cover;
 	     background-position: 0% 0%; background-color: ##0000cc;">
 
 <div class="header">
-<img src="ampere_logo.png" 
+<img src="images/ampere_logo.png" 
 	 alt="Ampere Logo" 
 	 style="float:left; margin-bottom:20px; height: 160px; width: 120px; object-fit: contain;"
 >
