--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@ h6 {
 <div class="header">
 <img src="images/ampere_logo.png" 
 	 alt="Ampere Logo" 
-	 style="float:right; margin-bottom:20px; height: 160px; width: 120px; object-fit: contain;"
+	 style="float:left; margin-bottom:20px; height: 200px; width: 150px; object-fit: contain;"
 >
-<h1> Welcome to Ampere</h1>
+<h1> Welcome to Ampere!</h1>
 </div>
 
 <div class="topnav">
