--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ h6 {
 
 <div class="header">
 <img src="images/ampere_logo.png" 
-	 alt="Ampere Logo" 
+	 alt="Ampere Logo" align= "top"
 	 style="float:left; margin-bottom:20px; height: 200px; width: 150px; object-fit: contain;"
 >
 <h1> Welcome to Ampere!</h1>
