--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@ h6 {
 <h1> Welcome to Ampere!</h1>
 </div>
 
+<center>
 <div class="topnav">
   <a href="index.html">HOME</a>
   <a href="gallery.html">GALLERY</a>
@@ -120,6 +121,7 @@ h6 {
   <a href="contacts.html">CONTACTS</a>
   <a href="about.html">ABOUT</a>
 </div>
+</center>
 
 <center>
  <img src="images/Jaguar.jpeg" style="width: 20%; padding-right: 25px; display: block; margin:auto" >
