--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
 <head>
 <title>Ampere</title>
 <link rel="icon" type="image/ico" href="favicon.ico" />
+<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 
 <style>
 /* Style the header: https://designshack.net/articles/css/the-10-best-script-and-handwritten-google-web-fonts/   */
 .header {
-   font: 100 20px 'Merienda One', Helvetica, sans-serif;
+   font: 100 20px 'Montserrat', sans-serif;
    color: #ff3300;
    text-align: center;
    padding-top: 10px;
@@ -20,6 +21,7 @@
    margin-bottom: 10px;
    height: 100px;
    width: 90%;
+   font-family: 'Montserrat', sans-serif;
 }
 /* The navbar container */
 .topnav {
@@ -56,6 +58,7 @@ h2 {
   margin-bottom: 25px;
   padding-top: 10px;
   padding-bottom: 5px;	
+
  }
 h4 {
   text-align: justify;
