--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ h6 {
 	 alt="Ampere Logo" align= "top"
 	 style="float:left; margin-bottom:20px; height: 200px; width: 150px; object-fit: contain;"
 >
-<h1> Welcome to Ampere!</h1>
+<h1> <b> Welcome to Ampere! </b> </h1>
 </div>
 
 <center>
@@ -129,9 +129,9 @@ h6 {
 <center>
  <img src="images/Jaguar.jpeg" style="width: 20%; padding-right: 25px; display: block; margin:auto" >
 </center>
-
-<h4> Welcome to the Flying Toucans Marching Band homepage, where you can enjoy the samples of previous performance videos, audio tracks and image gallery. The Flying Toucans Marching Band Group has been performing award winning shows for over a decade. Our group has nearly 100 members and our director, Ducky Toms, has been constantly perfecting our shows. Some of our award winning shows were Walking Giants, Away from Home, Jazzy Space, and The Homecoming Queen. 
-     This year, our show will be Night with China featuring popular Chinese Songs. We do compete, so please help us by attending our amazing show. We are humble for our awards and donate a tenth of our money to charities. Hope you will enjoy our show this year. </h4>
+	
+<h2> Our Goal </h2>
+<h4> We want to create efficient cars that don’t use up fossil fuels, help reduce global warming so we can save the planet, and use part of the money to further our cause. </h4>
 
 <h2>Sample Videos</h2>
 <center>
