--- a/index.html
+++ b/index.html
@@ -61,11 +61,13 @@ h2 {
 
  }
 h4 {
+  font: 100 15px 'Montserrat', sans-serif;
   text-align: justify;
   font-size: 12px; 
   color: #ffff00; 
   margin-left: 50px; margin-right: 50px; 
   margin-bottom: 10px; margin-top: 10px;
+  font-family: 'Montserrat', sans-serif;
  }
 h6 {
   text-align: center;
