--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 }
 /* The navbar container */
 .topnav {
+  font: 100 24px 'Montserrat', sans-serif;
   height: 60px;
   width: 90%;
   text-align: center;
@@ -34,6 +35,7 @@
   padding-top: 10px;
   font-size: 24px;
   font-weight: bold;
+  font-family: 'Montserrat', sans-serif;
 }
 /* Navbar links */
 .topnav a {
