--- a/index.html
+++ b/index.html
@@ -89,12 +89,14 @@ h2 {
   padding-bottom: 5px;	
  }
 h4 {
+  font: 100 15px 'Montserrat', sans-serif;
   text-align: justify;
   font-size: 18px;
   color: #ffff00;
   width: 85%;
   margin-left: 100px; margin-right: 50px;
   margin-right: 10px; margin-bottom: 10px;
+  font-family: 'Montserrat', sans-serif;
  }
 h6 {
   text-align: center;
