--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@ h6 {
 </center>
 
 <center>
- <img src="images/Jaguar.jpeg" style="width: 20%; padding-right: 25px; display: block; margin:auto" >
+ <img src="images/TitleCar.jpeg" style="width: 20%; padding-right: 25px; display: block; margin:auto" >
 </center>
 	
-<h2> Our Goal </h2>
+<h2> Our Goal: </h2>
 <h4> We want to create efficient cars that don’t use up fossil fuels, help reduce global warming so we can save the planet, and use part of the money to further our cause. </h4>
 
 <h2>Sample Videos</h2>
