--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ h6 {
 </center>
 
 <center>
- <img src="images/TitleCar.jpeg" style="width: 20%; padding-right: 25px; display: block; margin:auto" >
+ <img src="images/TitleCar.jpg" style="width: 20%; padding-right: 25px; display: block; margin:auto" >
 </center>
 	
 <h2> Our Goal: </h2>
