--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 /* Style the header: https://designshack.net/articles/css/the-10-best-script-and-handwritten-google-web-fonts/   */
 .header {
    font: 100 20px 'Montserrat', sans-serif;
-   color: #ff3300;
+   color: #AF0000;
    text-align: center;
    padding-top: 10px;
    padding-bottom: 10px;
@@ -66,7 +66,7 @@ h4 {
   font: 100 15px 'Montserrat', sans-serif;
   text-align: justify;
   font-size: 12px; 
-  color: #ffff00; 
+  color: #ffbcd9; 
   margin-left: 50px; margin-right: 50px; 
   margin-bottom: 10px; margin-top: 10px;
   font-family: 'Montserrat', sans-serif;
@@ -92,7 +92,7 @@ h4 {
   font: 100 15px 'Montserrat', sans-serif;
   text-align: justify;
   font-size: 18px;
-  color: #ffff00;
+  color: #ffbcd9;
   width: 85%;
   margin-left: 100px; margin-right: 50px;
   margin-right: 10px; margin-bottom: 10px;
@@ -139,7 +139,7 @@ h6 {
 <h2> Our Goal: </h2>
 <h4> We want to create efficient cars that don’t use up fossil fuels, help reduce global warming so we can save the planet, and use part of the money to further our cause. </h4>
 
-<h2>Sample Videos</h2>
+<h2>Popular Cars </h2>
 <center>
 	<iframe style="margin-right:50px; margin-bottom:10px;" 
 	    src="https://www.youtube.com/embed/YiWT4oiyiJQ" frameborder="0" allowfullscreen=""></iframe>
