--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 /* Style the header: https://designshack.net/articles/css/the-10-best-script-and-handwritten-google-web-fonts/   */
 .header {
    font: 100 20px 'Montserrat', sans-serif;
-   color: #AF0000;
+   color: #0CE4D7;
    text-align: center;
    padding-top: 10px;
    padding-bottom: 10px;
