--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ h4 {
 h6 {
   text-align: center;
   font-size: 12px;
-  color: #ffcc00;
+  color: #E72F71;
   margin-top:50px; margin-bottom:20px; 
  }
 }
@@ -101,7 +101,7 @@ h4 {
 h6 {
   text-align: center;
   font-size: 12px;
-  color: #ffcc00;
+  color: #E72F71;
   margin-top:50px;
   margin-bottom:20px; 
  }
@@ -166,7 +166,7 @@ h6 {
  </center>
 
  <center>
-    <h6> Copyright © 2019 https://flyingtoucans.github.io </h6>
+    <h6> Copyright © 2019 https://ampereoutlet.github.io/ </h6>
  </center>
 
 </body>
