--- a/index.html
+++ b/index.html
@@ -65,17 +65,19 @@ h2 {
 h4 {
   font: 100 15px 'Montserrat', sans-serif;
   text-align: justify;
-  font-size: 12px; 
+  font-size: 18px; 
   color: #ffbcd9; 
   margin-left: 50px; margin-right: 50px; 
   margin-bottom: 10px; margin-top: 10px;
   font-family: 'Montserrat', sans-serif;
  }
 h6 {
+  font: 100 15px 'Montserrat', sans-serif;
   text-align: center;
-  font-size: 12px;
+  font-size: 15px;
   color: #E72F71;
   margin-top:50px; margin-bottom:20px; 
+  font-family: 'Montserrat', sans-serif;
  }
 }
 @media only screen and (min-width: 720px) {
@@ -99,11 +101,13 @@ h4 {
   font-family: 'Montserrat', sans-serif;
  }
 h6 {
+  font: 100 15px 'Montserrat', sans-serif;
   text-align: center;
-  font-size: 12px;
+  font-size: 15px;
   color: #E72F71;
   margin-top:50px;
-  margin-bottom:20px; 
+  margin-bottom:20px;
+  font-family: 'Montserrat', sans-serif;
  }
 }
 </style>
