--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@ h6 {
 <div class="topnav">
   <a href="index.html">HOME</a>
   <a href="gallery.html">GALLERY</a>
-  <a href="booking.html">EVENT BOOKING</a>
-  <a href="blog.html">BLOG</a>
+  <a href="booking.html">BUY</a>
+  <a href="blog.html">NEWS</a>
   <a href="contacts.html">CONTACTS</a>
   <a href="about.html">ABOUT</a>
 </div>
