--- a/gallery.html
+++ b/gallery.html
@@ -141,13 +141,13 @@ h6 {
 
 <div style="width:94%; padding-left:50px; align-content: center">
 <center>
-<figure style="background-image: url('images/snare_drum.jpeg'); background-size: cover">
+<figure style="background-image: url('images/Roadster.jpg'); background-size: cover">
 </figure>
-<figure style="background-image: url('images/cool_image.jpeg'); background-size: cover">
+<figure style="background-image: url('images/Lucid.jpg'); background-size: cover">
 </figure>
-<figure style="background-image: url('images/ColorGaurds.jpg'); background-size: cover">
+<figure style="background-image: url('images/Lotus.jpg'); background-size: cover">
 </figure>
-<figure style="background-image: url('images/BandInAction.jpeg'); background-size: cover">
+<figure style="background-image: url('images/Jaguar.jpeg'); background-size: cover">
 </figure>
 <figure style="background-image: url('images/Parade.jpeg'); background-size: cover">
 </figure>
