--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 /* Links - change color on hover */
 .topnav a:hover {
   background-color: GoldenRod ;
-  color: Maroon;
+  color: #38047B;
 }
 @media only screen and (max-width: 720px) {
 h2 {
