--- a/gallery.html
+++ b/gallery.html
@@ -48,7 +48,7 @@
 /* Links - change color on hover */
 .topnav a:hover {
   background-color: GoldenRod ;
-  color: Maroon;
+  color: #38047B;
 }
 @media only screen and (max-width: 720px) {
 h2 {
@@ -129,8 +129,8 @@ h6 {
 <center>
   <a href="index.html">HOME</a>
   <a href="gallery.html">GALLERY</a>
-  <a href="booking.html">BUY</a>
-  <a href="blog.html">NEWS</a>
+  <a href="buy.html">BUY</a>
+  <a href="news.html">NEWS</a>
   <a href="contacts.html">CONTACTS</a>
   <a href="about.html">ABOUT</a>
   </center>
