--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@ h6 {
   <center>
   <a href="index.html">HOME</a>
   <a href="gallery.html">GALLERY</a>
-  <a href="booking.html">BUY</a>
-  <a href="blog.html">NEWS</a>
+  <a href="buy.html">BUY</a>
+  <a href="news.html">NEWS</a>
   <a href="contacts.html">CONTACTS</a>
   <a href="about.html">ABOUT</a>
   </center>
