--- a/east.html
+++ b/east.html
@@ -12,7 +12,7 @@
 /* Style the header: https://designshack.net/articles/css/the-10-best-script-and-handwritten-google-web-fonts/   */
 .header {
    font: 100 20px 'Montserrat', sans-serif;
-   color: #0CE4D7;
+   color: #0F17B8;
    text-align: center;
    padding-top: 10px;
    padding-bottom: 10px;
@@ -47,7 +47,7 @@
 }
 /* Links - change color on hover */
 .topnav a:hover {
-  background-color: GoldenRod ;
+  background-color: #58B0F9 ;
   color: #38047B;
 }
 @media only screen and (max-width: 720px) {
@@ -134,3 +134,6 @@ h6 {
 <center>
  <img src="images/DEHS.jpg" style="width: 20%; padding-right: 25px; display: block; margin:auto" >
 </center>
+
+<h2> About Downgintown East: </h2>
+<h4> Our school is one of the three highschools of the Downingtown Area School district. Our school offers a diverse program of study. Students can get involved in academics of all levels, along with many extracurricular activities. Our program offers Academic, AP, Honors, Basic, Business Educational, Industrial Arts Technology and Vocational Technical courses. </h4>
