--- a/east.html
+++ b/east.html
@@ -65,7 +65,7 @@ h4 {
   font: 100 15px 'Montserrat', sans-serif;
   text-align: justify;
   font-size: 18px; 
-  color: #ffbcd9; 
+  color: #7E10BD; 
   margin-left: 50px; margin-right: 50px; 
   margin-bottom: 10px; margin-top: 10px;
   font-family: 'Montserrat', sans-serif;
@@ -93,7 +93,7 @@ h4 {
   font: 100 15px 'Montserrat', sans-serif;
   text-align: justify;
   font-size: 18px;
-  color: #ffbcd9;
+  color: #7E10BD;
   width: 85%;
   margin-left: 100px; margin-right: 50px;
   margin-right: 10px; margin-bottom: 10px;
