--- a/east.html
+++ b/east.html
@@ -65,7 +65,7 @@ h4 {
   font: 100 15px 'Montserrat', sans-serif;
   text-align: justify;
   font-size: 18px; 
-  color: #7E10BD; 
+  color: #DEAFF9; 
   margin-left: 50px; margin-right: 50px; 
   margin-bottom: 10px; margin-top: 10px;
   font-family: 'Montserrat', sans-serif;
@@ -93,7 +93,7 @@ h4 {
   font: 100 15px 'Montserrat', sans-serif;
   text-align: justify;
   font-size: 18px;
-  color: #7E10BD;
+  color: #DEAFF9;
   width: 85%;
   margin-left: 100px; margin-right: 50px;
   margin-right: 10px; margin-bottom: 10px;
@@ -135,5 +135,5 @@ h6 {
  <img src="images/DEHS.jpg" style="width: 20%; padding-right: 25px; display: block; margin:auto" >
 </center>
 
-<h2> About Downgintown East: </h2>
+<h2> About Downingtown East: </h2>
 <h4> Our school is one of the three highschools of the Downingtown Area School district. Our school offers a diverse program of study. Students can get involved in academics of all levels, along with many extracurricular activities. Our program offers Academic, AP, Honors, Basic, Business Educational, Industrial Arts Technology and Vocational Technical courses. </h4>
