--- a/east.html
+++ b/east.html
@@ -132,8 +132,12 @@ h6 {
 
 
 <center>
- <img src="images/DEHS.jpg" style="width: 20%; padding-right: 25px; display: block; margin:auto" >
+ <img src="images/DEHS_campus.jpeg" style="width: 20%; padding-right: 25px; display: block; margin:auto" >
 </center>
 
 <h2> About Downingtown East: </h2>
 <h4> Our school is one of the three highschools of the Downingtown Area School district. Our school offers a diverse program of study. Students can get involved in academics of all levels, along with many extracurricular activities. Our program offers Academic, AP, Honors, Basic, Business Educational, Industrial Arts Technology and Vocational Technical courses. </h4>
+<h4> We are located at 50 Devon Drive, Exton, PA 19341. </h4>
+<h4> Phone: (610) 363-6400 </h4>	
+	
+	
