--- a/east.html
+++ b/east.html
@@ -31,6 +31,7 @@
   margin-left: 150px;
   margin-top: 5px;
   margin-bottom: 25px;
+  padding-left: 350px;
   padding-top: 10px;
   font-size: 24px;
   font-weight: bold;
@@ -65,7 +66,7 @@ h4 {
   font: 100 15px 'Montserrat', sans-serif;
   text-align: justify;
   font-size: 18px; 
-  color: #DEAFF9; 
+  color: #CBF2FF; 
   margin-left: 50px; margin-right: 50px; 
   margin-bottom: 10px; margin-top: 10px;
   font-family: 'Montserrat', sans-serif;
@@ -93,7 +94,7 @@ h4 {
   font: 100 15px 'Montserrat', sans-serif;
   text-align: justify;
   font-size: 18px;
-  color: #DEAFF9;
+  color: #CBF2FF;
   width: 85%;
   margin-left: 100px; margin-right: 50px;
   margin-right: 10px; margin-bottom: 10px;
