--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ h6 {
 	     background-position: 0% 0%; background-color: ##0000cc;">
 
 <div class="header">
-<img src="images/ampere_logo.png" 
+ <a href="index.html"> <img src="images/ampere_logo.png"> </a>
 	 alt="Ampere Logo" align= "top"
 	 style="float:left; margin-bottom:20px; height: 200px; width: 150px; object-fit: contain;"
 >
@@ -129,7 +129,10 @@ h6 {
   <center>
   <a href="index.html">HOME</a>
   <a href="gallery.html">GALLERY</a>
-  <a href="buy.html">BUY</a>
+  <a href="model_1.html">MODEL 1</a>
+  <a href="model_2.html">MODEL 2</a>
+  <a href="model_3.html">MODEL 3</a>
+  <a href="model_4.html">MODEL 4</a>
   <a href="news.html">NEWS</a>
   <a href="contacts.html">CONTACTS</a>
   <a href="about.html">ABOUT</a>
@@ -144,31 +147,8 @@ h6 {
 <h2> Our Goal: </h2>
 <h4> We want to create efficient cars that don’t use up fossil fuels, help reduce global warming so we can save the planet, and use part of the money to further our cause. </h4>
 
-<h2>Popular Cars </h2>
-<center>
-	<iframe style="margin-right:50px; margin-bottom:10px;" 
-	    src="https://www.youtube.com/embed/YiWT4oiyiJQ" frameborder="0" allowfullscreen=""></iframe>
-	<iframe style="margin-right:50px; margin-bottom:10px;"
-	    src="https://www.youtube.com/embed/vbWywm4u92s" frameborder="0" allowfullscreen=""></iframe>
-	<iframe style="margin-right:50px; margin-bottom:10px;"
-	    src="https://www.youtube.com/embed/VgFmlcavoJc" frameborder="0" allowfullscreen=""></iframe>
-</center>
-
-<h2>Sample Audio Tracks</h2>
-<center>
-	<audio style="margin-right:50px; margin-bottom:10px;" controls="controls">
-	  <source src="audio/FireFliesCloser.mp3" type="audio/mp3">
-	  Your browser does not support the audio element.
-	</audio>
-	<audio style="margin-right:50px; margin-bottom:10px;" controls="controls">
-	  <source src="audio/HideAndSeekBallad.mp3" type="audio/mp3">
-	  Your browser does not support the audio element.
-	</audio>
-	<audio style="margin-right:50px; margin-bottom:10px;" controls="controls">
-	  <source src="audio/FireFliesOpener.mp3" type="audio/mp3">
-	  Your browser does not support the audio element.
-	</audio>
- </center>
+<h2> Company History </h2>
+<h4> Our company was founded on September 7, 2003, by INSERT PPL HERE. </h4>
 
  <center>
     <h6> Copyright © 2020 https://ampereoutlet.github.io/ </h6>
