--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@ h6 {
 	     background-position: 0% 0%; background-color: ##0000cc;">
 
 <div class="header">
- <a href="index.html"> <img src="images/ampere_logo.png"> </a>
+ <a href="index.html"> <img src="images/ampere_logo.png"> 
 	 alt="Ampere Logo" align= "top"
 	 style="float:left; margin-bottom:20px; height: 200px; width: 150px; object-fit: contain;"
->
+> </a>
 <h1> <b> Welcome to Ampere! </b> </h1>
 </div>
 
