--- a/index.html
+++ b/index.html
@@ -117,11 +117,10 @@ h6 {
 <div style="background-image: url('images/new_background.jpg'); background-repeat: no-repeat; background-size: cover;
 	     background-position: 0% 0%; background-color: ##0000cc;">
 
-<div class="header">
- <a href="index.html"> <img src="images/ampere_logo.png"> 
+<div class="header"> <img src="images/ampere_logo.png"> 
 	 alt="Ampere Logo" align= "top"
 	 style="float:left; margin-bottom:20px; height: 200px; width: 150px; object-fit: contain;"
-> </a>
+> 
 <h1> <b> Welcome to Ampere! </b> </h1>
 </div>
 
