--- a/gallery.html
+++ b/gallery.html
@@ -129,7 +129,10 @@ h6 {
 <center>
   <a href="index.html">HOME</a>
   <a href="gallery.html">GALLERY</a>
-  <a href="buy.html">BUY</a>
+  <a href="model_1.html">MODEL 1</a>
+  <a href="model_2.html">MODEL 2</a>
+  <a href="model_3.html">MODEL 3</a>
+  <a href="model_4.html">MODEL 4</a>
   <a href="news.html">NEWS</a>
   <a href="contacts.html">CONTACTS</a>
   <a href="about.html">ABOUT</a>
