--- a/east.html
+++ b/east.html
@@ -142,8 +142,8 @@ h6 {
 <h4> Phone: (610) 363-6400 </h4>	
 
 <br>
-<a style= "flot:left; color: #ff00bf; margin-left: 50px" href="index.html">GO TO OUR COMPANY PAGE</a>	
-<a style= "float:right; color: #ff00bf;  margin-right: 50px" href="tsa.html">GO TO FIND INFORMATION ON OUR TSA CHAPTER </a>	
+<a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:left; color: #ff00bf; margin-left: 50px" href="index.html">GO TO OUR COMPANY PAGE</a>	
+<a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:right; color: #ff00bf;  margin-right: 50px" href="tsa.html">GO TO FIND INFORMATION ON OUR TSA CHAPTER </a>	
 	
 <br>
 
