--- a/east.html
+++ b/east.html
@@ -66,7 +66,7 @@ h4 {
   font: 100 15px 'Montserrat', sans-serif;
   text-align: justify;
   font-size: 18px; 
-  color: #CBF2FF; 
+  color: #5BDAFF; 
   margin-left: 50px; margin-right: 50px; 
   margin-bottom: 10px; margin-top: 10px;
   font-family: 'Montserrat', sans-serif;
@@ -94,7 +94,7 @@ h4 {
   font: 100 15px 'Montserrat', sans-serif;
   text-align: justify;
   font-size: 18px;
-  color: #CBF2FF;
+  color: #5BDAFF;
   width: 85%;
   margin-left: 100px; margin-right: 50px;
   margin-right: 10px; margin-bottom: 10px;
@@ -142,8 +142,8 @@ h6 {
 <h4> Phone: (610) 363-6400 </h4>	
 
 <br>
-<a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:left; color: #ff00bf; margin-left: 50px" href="index.html">GO TO OUR COMPANY PAGE</a>	
-<a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:right; color: #ff00bf;  margin-right: 50px" href="tsa.html">GO TO FIND INFORMATION ON OUR TSA CHAPTER </a>	
+<a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:left; color: #C891FF; margin-left: 50px" href="index.html">GO TO OUR COMPANY PAGE</a>	
+<a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:right; color: #C891FF;  margin-right: 50px" href="tsa.html">GO TO FIND INFORMATION ON OUR TSA CHAPTER </a>	
 	
 <br>
 
