--- a/clubs.html
+++ b/clubs.html
@@ -132,12 +132,20 @@ h6 {
 
 
 <center>
- <img src="images/DEHS_campus.jpeg" style="width: 20%; padding-right: 25px; display: block; margin:auto" >
+ <img src="images/DEHS_campus.jpeg" style="max-width: 150%; max-height: 125%; padding-right: 25px; display: block; margin:auto" >
 </center>
 
-<h2> Courses: </h2>
-<h4> Clubs </h4>
-<h4> vcugjvgj </h4>
+<h2> <b> Clubs </b> </h2>
+<h2> Coding Club - Mr. Mirah </h2>
+<h4> Rm 218 - Once per week </h4>
+<h2> Computer Aided Drafting - Mr. Robinson </h2>
+<h4> Rm 139 - Every other Wednesday </h4>
+<h2> Computers for A Cause - Mr. Robinson </h2>
+<h4> Rm 139 - Twice per month </h4>
+<h2> Tech Club - Mr. Brown </h2>
+<h4> Rm 301 - Once per week </h4>
+<h2> TV Studio Club - Mr. Eagles </h2>
+<h4> Rm 137 - Every morning </h4>
 
 <br>
 <a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:left; color: #C891FF; margin-left: 50px" href="index.html">GO TO OUR COMPANY PAGE</a>	
