--- a/clubs.html
+++ b/clubs.html
@@ -147,6 +147,10 @@ h6 {
 <h2> TV Studio Club - Mr. Eagles </h2>
 <h4> Rm 137 - Every morning </h4>
 
+<center>
+ <img src="images/logo.png" style="max-width: 200%; max-height: 200%; padding-right: 25px; display: block; margin:auto" >
+</center>
+
 <br>
 <a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:left; color: #C891FF; margin-left: 50px" href="index.html">GO TO OUR COMPANY PAGE</a>	
 <a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:right; color: #C891FF;  margin-right: 50px" href="tsa.html">GO TO FIND INFORMATION ON OUR TSA CHAPTER </a>	
