--- a/courses.html
+++ b/courses.html
@@ -184,7 +184,11 @@ technology can influence the world. Students will create digital artifacts, such
 <h4> k. Students will develop planning & leadership skills while designing and filming the videos needed in the process of publishing. </h4>
 <h2> TV Studio (9-12th grade) </h2>
 <h4> This is a course that provides students the opportunity to experience the process of producing a live news show. Students work together as a team to produce the school’s news show.  </h4>
-	
+
+<center>
+ <img src="images/logo.png" style="max-width: 200%; max-height: 200%; padding-right: 25px; display: block; margin:auto" >
+</center>
+
 	
 <br>
 <a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:left; color: #C891FF; margin-left: 50px" href="index.html">GO TO OUR COMPANY PAGE</a>	
