--- a/staff.html
+++ b/staff.html
@@ -135,9 +135,16 @@ h6 {
  <img src="images/DEHS_campus.jpeg" style="width: 20%; padding-right: 25px; display: block; margin:auto" >
 </center>
 
-<h2> Staff: </h2>
-<h4> Mr. Mirah </h4>
-<h4>  bloop </h4>
+<h2> <b> Staff: </b> </h2>
+
+<h2> Chester Eagles </h2>
+<h2> Mr. Mirah </h2>
+<h2> Mr. Mirah </h2>
+<h2> Mr. R Robinsion </h2>
+<h2> Mr. W Robinsion </h2>
+<h2> Mr. Scheuer </h2>
+<h2> Mr. Walker </h2>
+
 
 <br>
 <a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:left; color: #C891FF; margin-left: 50px" href="index.html">GO TO OUR COMPANY PAGE</a>	
