--- a/staff.html
+++ b/staff.html
@@ -138,12 +138,22 @@ h6 {
 <h2> <b> Staff: </b> </h2>
 
 <h2> Chester Eagles </h2>
-<h2> Mr. Mirah </h2>
-<h2> Mr. Mirah </h2>
+<h4> Email: ceagles@dasd.org  </h4>
+
+<h2> Christopher Mirah </h2>
+<h4> Email: cmirah@dasd.org Email: cmirah@dasd.org  </h4>
+	
 <h2> Mr. R Robinsion </h2>
+<h4> Email: rrobinson@dasd.org  </h4>
+
 <h2> Mr. W Robinsion </h2>
+<h4> Email: wrobinson@dasd.org </h4>
+	
 <h2> Mr. Scheuer </h2>
+<h4> Email: jscheuer@dasd.org </h4>
+
 <h2> Mr. Walker </h2>
+<h4> Email: kywalker@dasd.org </h4>
 
 
 <br>
