--- a/staff.html
+++ b/staff.html
@@ -132,7 +132,7 @@ h6 {
 
 
 <center>
- <img src="images/DEHS_campus.jpeg" style="width: 20%; padding-right: 25px; display: block; margin:auto" >
+ <img src="images/DEHS_campus.jpeg" style="max-width: 150%; max-height: 125%; padding-right: 25px; display: block; margin:auto" >
 </center>
 
 <h2> <b> Staff: </b> </h2>
