--- a/courses.html
+++ b/courses.html
@@ -133,7 +133,7 @@ h6 {
 
 
 <center>
- <img src="images/DEHS_campus.jpeg" style="max-width: 150%; max-height: 125%; width: 20%; padding-right: 25px; display: block; margin:auto" >
+ <img src="images/DEHS_campus.jpeg" style="max-width: 150%; max-height: 125%; padding-right: 25px; display: block; margin:auto" >
 </center>
 
 <h2> Computer Science Courses </h2>
