--- a/tsa.html
+++ b/tsa.html
@@ -117,7 +117,7 @@ h6 {
 	     background-position: 0% 0%; background-color: ##0000cc;">
 
 <div class="header" style="align-content: center; width:90%">
-	 <h1> <b> Downingtown East Technology Education </b> </h1>
+	 <h1> <b> Downingtown TSA Chapter </b> </h1>
 </div>
 
 <div class="topnav">
