--- a/east.html
+++ b/east.html
@@ -134,7 +134,7 @@ h6 {
 
 
 <center>
- <img src="images/DEHS_campus.jpeg" style="max-width: 150%; max-height: 125%; padding-right: 25px; padding-left: 15px; display: block; margin:auto" >
+ <img src="images/DEHS_campus.jpeg" style="max-width: 150%; max-height: 125%; padding-left: 15px; display: block;" >
 </center>
 
 <h2> About Downingtown East: </h2>
