--- a/tsa.html
+++ b/tsa.html
@@ -12,7 +12,7 @@
 /* Style the header: https://designshack.net/articles/css/the-10-best-script-and-handwritten-google-web-fonts/   */
 .header {
    font: 100 20px 'Montserrat', sans-serif;
-   color: #a80038;
+   color: #db022a;
    text-align: center;
    padding-top: 10px;
    padding-bottom: 10px;
@@ -41,20 +41,20 @@
 .topnav a {
   float: left;
   display: block;
-  color: #a80038;
+  color: #db022a;
   text-align: center;
   padding: 8px 10px;
   text-decoration: none;
 }
 /* Links - change color on hover */
 .topnav a:hover {
-  background-color: #58B0F9 ;
-  color: #38047B;
+  background-color: #6deddc ;
+  color: #8a6908;
 }
 @media only screen and (max-width: 720px) {
 h2 {
   font: 100 16px 'Berkshire Swash', Helvetica, sans-serif;
-  color: #601f8c;
+  color: #fce8ff;
   margin-left: 50px;
   margin-top: 25px;
   margin-bottom: 25px;
@@ -65,7 +65,7 @@ h4 {
   font: 100 15px 'Montserrat', sans-serif;
   text-align: justify;
   font-size: 18px; 
-  color: #5f1378; 
+  color: #fce8ff; 
   margin-left: 50px; margin-right: 50px; 
   margin-bottom: 10px; margin-top: 10px;
   font-family: 'Montserrat', sans-serif;
@@ -82,7 +82,7 @@ h6 {
 @media only screen and (min-width: 720px) {
 h2 {
   font: 100 20px 'Berkshire Swash', Helvetica, sans-serif;
-  color: #601f8c;
+  color: #fce8ff;
   margin-left: 100px;
   margin-top: 20px;
   margin-bottom: 20px;
@@ -93,7 +93,7 @@ h4 {
   font: 100 15px 'Montserrat', sans-serif;
   text-align: justify;
   font-size: 18px;
-  color: #5f1378;
+  color: #fce8ff;
   width: 85%;
   margin-left: 100px; margin-right: 50px;
   margin-right: 10px; margin-bottom: 10px;
