--- a/east.html
+++ b/east.html
@@ -132,7 +132,7 @@ h6 {
   </center>
 </div>
 
- <img src="images/DEHS_campus.jpeg" style="max-width: 150%; max-height: 125%;" >
+ <img src="images/DEHS_campus.jpeg" style="max-width: 150%; max-height: 125%; margin-left: 150px" >
 
 
 <h2> About Downingtown East: </h2>
