--- a/gallery.html
+++ b/gallery.html
@@ -108,6 +108,11 @@ h6 {
   margin-bottom:20px;
   font-family: 'Montserrat', sans-serif;
  }
+
+html, body {
+    margin:0;
+    padding:0;
+}
 }
 </style>
 </head>
