--- a/gallery.html
+++ b/gallery.html
@@ -109,11 +109,20 @@ h6 {
   font-family: 'Montserrat', sans-serif;
  }
 
-html, body {
-    margin:0;
-    padding:0;
-    background-size: cover;
-  }
+img.bg {
+  /* Set rules to fill background */
+  min-height: 100%;
+  min-width: 1024px;
+	
+  /* Set up proportionate scaling */
+  width: 100%;
+  height: auto;
+	
+  /* Set up positioning */
+  position: fixed;
+  top: 0;
+  left: 0;
+}
 }
 </style>
 </head>
