--- a/gallery.html
+++ b/gallery.html
@@ -109,31 +109,17 @@ h6 {
   font-family: 'Montserrat', sans-serif;
  }
 
-#bg {
-  position: fixed; 
-  top: -50%; 
-  left: -50%; 
-  width: 200%; 
-  height: 200%;
+body {
+  background-image: url('images/new_background.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;  
+  background-size: cover;
 }
-#bg img {
-  position: absolute; 
-  top: 0; 
-  left: 0; 
-  right: 0; 
-  bottom: 0; 
-  margin: auto; 
-  min-width: 50%;
-  min-height: 50%;
-  }
 }
 </style>
 </head>
 
 <body>
-<div id="bg">
-  <img src="images/new_background.jpg" alt="">
-</div>
 
 <div class="header">
 <img src="images/ampere_logo.png" 
