--- a/tsa.html
+++ b/tsa.html
@@ -108,13 +108,18 @@ h6 {
   margin-bottom:20px;
   font-family: 'Montserrat', sans-serif;
  }
+body {
+  background-image: url('images/tsa_background.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;  
+  background-size: cover;
 }
+}
+
 </style>
 </head>
 	
 <body>
-<div style="background-image: url('images/tsa_background.jpg'); background-repeat: no-repeat; background-size: cover;
-	     background-position: 0% 0%; background-color: ##0000cc;">
 
 <div class="header" style="align-content: center; width:90%">
 	 <h1> <b> Downingtown TSA Chapter </b> </h1>
@@ -132,11 +137,22 @@ h6 {
 
 
 <center>
- <img src="images/DEHS_campus.jpeg" style="max-width: 150%; max-height: 125%; padding-right: 25px; display: block; margin:auto" >
+ <img src="images/technology.jpg" style="max-width: 150%; max-height: 125%; padding-right: 25px; display: block; margin:auto" >
 </center>
 
-<h2> About TSA </h2>
-<h4> Tsa stuff </h4>
+<h2> <b> About TSA </b> </h2>
+<h4> TSA is a non-profit, national organization of students engaged in science, technology, engineering, and mathematics. </h4>
+<h4> There are middle and highschool members all across the United States. There are also multiple competitions, state-level, and then a national TSA Conference. </h4>
+<h4> It helps teachers meet the criteria for STEM education goals through fun and competitive ways. </h4>
+
+<h2> <b> History </b> </h2>
+<h4> TSA was established in 1978. Since then, almost 4,000,000 students have participated through competitions, community service, leadership oppurtunities, and various other ways. </h4>
+
+<h2> <b> Motto </b> </h2>
+<div class="header" style="align-content: center; width:90%">
+	 <h1> <b> Learning to lead in a technical world. </b> </h1>
+</div>
+	
 	
 <center>
  <img src="images/tsa_logo.png" style="max-width: 200%; max-height: 200%; padding-right: 25px; display: block; margin:auto" >
