--- a/index.html
+++ b/index.html
@@ -109,13 +109,17 @@ h6 {
   margin-bottom:20px;
   font-family: 'Montserrat', sans-serif;
  }
+body {
+  background-image: url('images/new_background.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;  
+  background-size: cover;
+}
 }
 </style>
 </head>
 	
 <body>
-<div style="background-image: url('images/new_background.jpg'); background-repeat: no-repeat; background-size: cover;
-	     background-position: 0% 0%; background-color: ##0000cc;">
 
 <div class="header"> 
 	<img src="images/ampere_logo.png"
@@ -141,7 +145,7 @@ h6 {
 
 
 <center>
- <img src="images/TitleCar.jpg" style="width: 20%; padding-right: 25px; display: block; margin:auto" >
+ <img src="images/TitleCar.jpg" style="max-width: 200%; max-height: 100%; padding-right: 25px; display: block; margin:auto" >
 </center>
 	
 <h2> Our Goal: </h2>
