--- a/contacts.html
+++ b/contacts.html
@@ -107,14 +107,18 @@ h6 {
   margin-bottom:20px;
   font-family: 'Montserrat', sans-serif;
  }
+body {
+  background-image: url('images/new_background.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;  
+  background-size: cover;
+}
 }
 </style>
 </head>
 	
 <body>
-<div style="background-image: url('images/new_background.jpg'); background-repeat: no-repeat; background-size: cover;
-	     background-position: 0% 0%; background-color: ##0000cc;">
-
+	
 <div class="header"> 
 	<img src="images/ampere_logo.png"
 	 alt="Ampere Logo" align= "top"
