--- a/east.html
+++ b/east.html
@@ -110,14 +110,17 @@ h6 {
   margin-bottom:20px;
   font-family: 'Montserrat', sans-serif;
  }
+body {
+  background-image: url('images/east_background.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;  
+  background-size: cover;
+}
 }
 </style>
 </head>
 	
 <body>
-<div style="background-image: url('images/east_background.jpg'); background-repeat: no-repeat; background-size: cover;
-	     background-position: 0% 0%; background-color: ##0000cc;">
-
 <div class="header" style="align-content: center; width:90%">
 	 <h1> <b> Downingtown East Technology Education </b> </h1>
 </div>
