--- a/tsa.html
+++ b/tsa.html
@@ -31,7 +31,7 @@
   margin-left: 150px;
   margin-top: 5px;
   margin-bottom: 25px;
-  padding-left: 350px;
+  padding-left: 200px;
   padding-top: 10px;
   font-size: 24px;
   font-weight: bold;
@@ -150,7 +150,7 @@ body {
 
 <h2> <b> Motto </b> </h2>
 <div class="header" style="align-content: center; width:90%">
-	 <h1> <b> Learning to lead in a technical world. </b> </h1>
+	 <h1> <b> "Learning to lead in a technical world." </b> </h1>
 </div>
 	
 	
