--- a/east.html
+++ b/east.html
@@ -143,6 +143,9 @@ body {
 <h4> We are located at 50 Devon Drive, Exton, PA 19341. </h4>
 <h4> Phone: (610) 363-6400 </h4>
 <h4> Fax: (610) 903-1047 </h4>
+
+<h2> About Technology Education at East: </h2>
+<h4> Technology education includes problem solving. It consists of students gathering, questioning, and evaluating information. They also draw conclusions. Technology education is an integral part of each student's education. It's a comprehensive activity-based program that is concerned with understanding the evolution, application, and significance of technology. Students who enroll in any technology education course should be prepared to pay either a lab fee and/or for materials used in the course. </h4>
 	
 <center>
  <img src="images/logo.png" style="max-width: 200%; max-height: 200%; padding-right: 25px; display: block; margin:auto" >
