--- a/east.html
+++ b/east.html
@@ -32,7 +32,7 @@
   margin-left: 100px;
   margin-top: 5px;
   margin-bottom: 25px;
-  padding-left: 300px;
+  padding-left: 350px;
   padding-top: 10px;
   font-size: 24px;
   font-weight: bold;
@@ -146,7 +146,10 @@ body {
 
 <h2> About Technology Education at East: </h2>
 <h4> Technology education includes problem solving. It consists of students gathering, questioning, and evaluating information. They also draw conclusions. Technology education is an integral part of each student's education. It's a comprehensive activity-based program that is concerned with understanding the evolution, application, and significance of technology. Students who enroll in any technology education course should be prepared to pay either a lab fee and/or for materials used in the course. </h4>
-	
+
+<h2> STEM EDUCATION – ENGINEERING PATHWAY: PROJECT LEAD THE WAY </h2>
+<h4> Project Lead the Way is a college recognized pre-engineering program designed to introduce students to the career of engineering. This program prepares students for the engineering classes in college. All students can benefit by completing the entire program, or by taking a few of the classes. Students can also qualify for college credit by successfully completing the core courses and the final exam. </h4>
+
 <center>
  <img src="images/logo.png" style="max-width: 200%; max-height: 200%; padding-right: 25px; display: block; margin:auto" >
 </center>
