--- a/clubs.html
+++ b/clubs.html
@@ -18,6 +18,7 @@
    padding-bottom: 10px;
    margin-top: 10px;
    margin-bottom: 10px;
+   margin-left: 50px;
    height: 100px;
    width: 90%;
    font-family: 'Montserrat', sans-serif;
