--- a/tsa.html
+++ b/tsa.html
@@ -18,6 +18,7 @@
    padding-bottom: 10px;
    margin-top: 10px;
    margin-bottom: 10px;
+   margin-left: 50px;
    height: 100px;
    width: 90%;
    font-family: 'Montserrat', sans-serif;
@@ -31,7 +32,7 @@
   margin-left: 150px;
   margin-top: 5px;
   margin-bottom: 25px;
-  padding-left: 200px;
+  padding-left: 300px;
   padding-top: 10px;
   font-size: 24px;
   font-weight: bold;
