--- a/east.html
+++ b/east.html
@@ -135,7 +135,7 @@ body {
   </center>
 </div>
 
- <img src="images/DEHS_campus.jpeg" style="max-width: 150%; max-height: 125%; margin-left: 350px" >
+ <img src="images/DEHS_campus.jpeg" style="max-width: 150%; max-height: 125%; padding-right: 25px; display: block; margin:auto" >
 
 
 <h2> About Downingtown East: </h2>
