--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ body {
 <h4> We want to create efficient cars that don’t use up fossil fuels, help reduce global warming so we can save the planet, and use part of the money to further our cause. </h4>
 
 <h2> Company History </h2>
-<h4> Our company was founded on September 7, 2003, by INSERT PPL HERE. </h4>
+<h4> Our company was founded on September 7, 2003, by Jayden Whitney, Dave Busby, Aleesha Ryan, and Braxton Stevens. </h4>
 
  <center>
     <h6> Copyright © 2020 https://ampereoutlet.github.io/ </h6>
