--- a/tsa.html
+++ b/tsa.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<title> About East </title>
+<title> Our TSA Chapter </title>
 <link rel="icon" type="image/ico" href="favicon.ico" />
 <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
