--- a/east.html
+++ b/east.html
@@ -42,7 +42,7 @@
 .topnav a {
   float: left;
   display: block;
-  color: #f2f2f2;
+  color: #4c25a8;
   text-align: center;
   padding: 8px 10px;
   text-decoration: none;
@@ -55,7 +55,7 @@
 @media only screen and (max-width: 720px) {
 h2 {
   font: 100 16px 'Berkshire Swash', Helvetica, sans-serif;
-  color: #f2f2f2;
+  color: #4c25a8;
   margin-left: 50px;
   margin-top: 25px;
   margin-bottom: 25px;
@@ -67,7 +67,7 @@ h4 {
   font: 100 15px 'Montserrat', sans-serif;
   text-align: justify;
   font-size: 18px; 
-  color: #5BDAFF; 
+  color: #1184a6; 
   margin-left: 50px; margin-right: 50px; 
   margin-bottom: 10px; margin-top: 10px;
   font-family: 'Montserrat', sans-serif;
