--- a/courses.html
+++ b/courses.html
@@ -42,7 +42,7 @@
 .topnav a {
   float: left;
   display: block;
-  color: #f2f2f2;
+  color: #4c25a8;
   text-align: center;
   padding: 8px 10px;
   text-decoration: none;
@@ -55,7 +55,7 @@
 @media only screen and (max-width: 720px) {
 h2 {
   font: 100 16px 'Berkshire Swash', Helvetica, sans-serif;
-  color: #f2f2f2;
+  color: #4c25a8;
   margin-left: 50px;
   margin-top: 25px;
   margin-bottom: 25px;
@@ -67,7 +67,7 @@ h4 {
   font: 100 15px 'Montserrat', sans-serif;
   text-align: justify;
   font-size: 18px; 
-  color: #5BDAFF; 
+  color: #1184a6; 
   margin-left: 50px; margin-right: 50px; 
   margin-bottom: 10px; margin-top: 10px;
   font-family: 'Montserrat', sans-serif;
@@ -84,7 +84,7 @@ h6 {
 @media only screen and (min-width: 720px) {
 h2 {
   font: 100 20px 'Berkshire Swash', Helvetica, sans-serif;
-  color: #f2f2f2;
+  color: #4c25a8;
   margin-left: 100px;
   margin-top: 20px;
   margin-bottom: 20px;
@@ -95,7 +95,7 @@ h4 {
   font: 100 15px 'Montserrat', sans-serif;
   text-align: justify;
   font-size: 18px;
-  color: #5BDAFF;
+  color: #1184a6;
   width: 85%;
   margin-left: 100px; margin-right: 50px;
   margin-right: 10px; margin-bottom: 10px;
@@ -111,7 +111,7 @@ h6 {
   font-family: 'Montserrat', sans-serif;
  }
 body {
-  background-image: url('images/east_background.jpg');
+  background-image: url('images/courses.jpeg');
   background-repeat: no-repeat;
   background-attachment: fixed;  
   background-size: cover;
