--- a/east.html
+++ b/east.html
@@ -84,7 +84,7 @@ h6 {
 @media only screen and (min-width: 720px) {
 h2 {
   font: 100 20px 'Berkshire Swash', Helvetica, sans-serif;
-  color: #f2f2f2;
+  color: #4c25a8;
   margin-left: 100px;
   margin-top: 20px;
   margin-bottom: 20px;
@@ -95,7 +95,7 @@ h4 {
   font: 100 15px 'Montserrat', sans-serif;
   text-align: justify;
   font-size: 18px;
-  color: #5BDAFF;
+  color: #1184a6;
   width: 85%;
   margin-left: 100px; margin-right: 50px;
   margin-right: 10px; margin-bottom: 10px;
