--- a/courses.html
+++ b/courses.html
@@ -111,7 +111,7 @@ h6 {
   font-family: 'Montserrat', sans-serif;
  }
 body {
-  background-image: url('images/courses.jpeg');
+  background-image: url('images/east_background.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;  
   background-size: cover;
@@ -138,7 +138,7 @@ body {
 
 
 <center>
- <img src="images/DEHS_campus.jpeg" style="max-width: 150%; max-height: 125%; padding-right: 25px; display: block; margin:auto" >
+ <img src="images/courses.jpeg" style="max-width: 150%; max-height: 125%; padding-right: 25px; display: block; margin:auto" >
 </center>
 
 <h2> Computer Science Courses </h2>
