--- a/clubs.html
+++ b/clubs.html
@@ -42,7 +42,7 @@
 .topnav a {
   float: left;
   display: block;
-  color: #f2f2f2;
+  color: #4c25a8;
   text-align: center;
   padding: 8px 10px;
   text-decoration: none;
@@ -55,7 +55,7 @@
 @media only screen and (max-width: 720px) {
 h2 {
   font: 100 16px 'Berkshire Swash', Helvetica, sans-serif;
-  color: #f2f2f2;
+  color: #4c25a8;
   margin-left: 50px;
   margin-top: 25px;
   margin-bottom: 25px;
@@ -66,7 +66,7 @@ h4 {
   font: 100 15px 'Montserrat', sans-serif;
   text-align: justify;
   font-size: 18px; 
-  color: #5BDAFF; 
+  color: #1184a6; 
   margin-left: 50px; margin-right: 50px; 
   margin-bottom: 10px; margin-top: 10px;
   font-family: 'Montserrat', sans-serif;
@@ -83,7 +83,7 @@ h6 {
 @media only screen and (min-width: 720px) {
 h2 {
   font: 100 20px 'Berkshire Swash', Helvetica, sans-serif;
-  color: #f2f2f2;
+  color: #4c25a8;
   margin-left: 100px;
   margin-top: 20px;
   margin-bottom: 20px;
@@ -94,7 +94,7 @@ h4 {
   font: 100 15px 'Montserrat', sans-serif;
   text-align: justify;
   font-size: 18px;
-  color: #5BDAFF;
+  color: #1184a6;
   width: 85%;
   margin-left: 100px; margin-right: 50px;
   margin-right: 10px; margin-bottom: 10px;
@@ -136,7 +136,7 @@ body {
 
 
 <center>
- <img src="images/DEHS_campus.jpeg" style="max-width: 150%; max-height: 125%; padding-right: 25px; display: block; margin:auto" >
+ <img src="images/clubs.jpeg" style="max-width: 150%; max-height: 125%; padding-right: 25px; display: block; margin:auto" >
 </center>
 
 <h2> <b> Clubs </b> </h2>
