--- a/index.html
+++ b/index.html
@@ -154,6 +154,14 @@ body {
 <h2> Company History </h2>
 <h4> Our company was founded on September 7, 2003, by Jayden Whitney, Dave Busby, Aleesha Ryan, and Braxton Stevens. </h4>
 
+<h2> Headquarters: 123 Sunnyville, California </h2>
+	
+<br>
+<a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:left; color: #C891FF; margin-left: 50px" href="east.html">GO TO OUR SCHOOL PAGE</a>	
+<a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:right; color: #C891FF;  margin-right: 50px" href="tsa.html">GO TO FIND INFORMATION ON OUR TSA CHAPTER </a>	
+	
+<br>
+
  <center>
     <h6> Copyright © 2020 https://ampereoutlet.github.io/ </h6>
  </center>
