--- a/gallery.html
+++ b/gallery.html
@@ -170,6 +170,12 @@ body {
  </center>
 </div>
 	
+<br>
+<a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:left; color: #C891FF; margin-left: 50px" href="east.html">GO TO OUR SCHOOL PAGE</a>	
+<a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:right; color: #C891FF;  margin-right: 50px" href="tsa.html">GO TO FIND INFORMATION ON OUR TSA CHAPTER </a>	
+	
+<br>
+	
  <center>
     <h6> Copyright © 2020 https://ampereoutlet.github.io </h6>
  </center>
