--- a/model_2.html
+++ b/model_2.html
@@ -147,10 +147,15 @@ body {
  <img src="images/TitleCar.jpg" style="width: 20%; padding-right: 25px; display: block; margin:auto" >
 </center>
 	
-<h2> Specs: </h2>
-<h4> Stuff </h4>
 
+<h2> Specs </h2>
+<h4> Fuel: Options: Air Conditioning </h4>
 
+<br>
+<a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:left; color: #C891FF; margin-left: 50px" href="east.html">GO TO OUR SCHOOL PAGE</a>	
+<a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:right; color: #C891FF;  margin-right: 50px" href="tsa.html">GO TO FIND INFORMATION ON OUR TSA CHAPTER </a>	
+	
+<br>
  <center>
     <h6> Copyright © 2020 https://ampereoutlet.github.io/ </h6>
  </center>
