--- a/model_3.html
+++ b/model_3.html
@@ -141,11 +141,14 @@ body {
   </center>
 </div>
 
-	
-
 <h2> Specs </h2>
-<h4> Our company was founded on September 7, 2003, by INSERT PPL HERE. </h4>
+<h4> Fuel: Options: Leather Reclining Seats </h4>
 
+<br>
+<a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:left; color: #C891FF; margin-left: 50px" href="east.html">GO TO OUR SCHOOL PAGE</a>	
+<a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:right; color: #C891FF;  margin-right: 50px" href="tsa.html">GO TO FIND INFORMATION ON OUR TSA CHAPTER </a>	
+	
+<br>
  <center>
     <h6> Copyright © 2020 https://ampereoutlet.github.io/ </h6>
  </center>
