--- a/news.html
+++ b/news.html
@@ -142,11 +142,22 @@ body {
 </div>
 
 <h2> News Updates </h2>
-<h4> We are proud to announce new openings in the following locations: </h4>
+<h4> 1/4/20 - We are proud to announce new openings in the following locations: </h4>
 <h4> Philadelphia, PA </h4>
 <h4> Albany, NY </h4>
 <h4> San Francisco, CA </h4>
 <h4> Ft. Lauderdale, FL </h4>
+	
+	
+<h4> 12/31/19 - Happy New Year everyone! Ampere wishes you another wonderful year. </h4>
+	
+<h4> 12/16/19 - It's finally here! Our brand new vehicle: "Model 4"!
+
+<br>
+<a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:left; color: #C891FF; margin-left: 50px" href="east.html">GO TO OUR SCHOOL PAGE</a>	
+<a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:right; color: #C891FF;  margin-right: 50px" href="tsa.html">GO TO FIND INFORMATION ON OUR TSA CHAPTER </a>	
+	
+<br>
 
  <center>
     <h6> Copyright © 2020 https://ampereoutlet.github.io/ </h6>
