--- a/contacts.html
+++ b/contacts.html
@@ -141,9 +141,15 @@ body {
   </center>
 </div>
 
-<h2> Contact Us! </h2>
-<h4> ampereoutlet2020@gmail.com </h4>
+<h2> Questions? Contact Us! </h2>
+<h4> Email: ampereoutlet2020@gmail.com </h4>
+<h4> Phone: 123-456-7890 </h4>
 
+<br>
+<a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:left; color: #C891FF; margin-left: 50px" href="east.html">GO TO OUR SCHOOL PAGE</a>	
+<a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:right; color: #C891FF;  margin-right: 50px" href="tsa.html">GO TO FIND INFORMATION ON OUR TSA CHAPTER </a>	
+	
+<br>
 
  <center>
     <h6> Copyright © 2020 https://ampereoutlet.github.io/ </h6>
