--- a/about.html
+++ b/about.html
@@ -141,10 +141,13 @@ body {
   </center>
 </div>
 
-<h2> About Us: </h2>
-<h4> We are highschool students who created this fake website for a school project. </h4>
+<h2> This website template is orignally built by the Webmaster team at the DEHS chapter. </h2>
 
-
+<br>
+<a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:left; color: #C891FF; margin-left: 50px" href="east.html">GO TO OUR SCHOOL PAGE</a>	
+<a style= "font-family: 'Montserrat', sans-serif; font-size: 15px; float:right; color: #C891FF;  margin-right: 50px" href="tsa.html">GO TO FIND INFORMATION ON OUR TSA CHAPTER </a>	
+	
+<br>
  <center>
     <h6> Copyright © 2020 https://ampereoutlet.github.io/ </h6>
  </center>
